# invariant_gfx

./: AGENTS.md  README.md  pyproject.toml
.cursor/commands/: release-invariant-gfx.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  composite.md  effects.md  layout.md  reference_pipelines.md  subgraphs.md
examples/: color_dashboard.py  effects_showcase.py  example_fonts.py  packed_text.py  quick_start.py  shapes_showcase.py  text_badge.py  text_drop_shadow.py  thermometer_button.py
examples/serialized/: README.md  square_button_badge.json
src/invariant_gfx/: __init__.py  artifacts.py
src/invariant_gfx/ops/: __init__.py  blob_to_image.py  brightness_contrast.py  colorize.py  composite.py  create_solid.py  crop.py  crop_region.py  crop_to_content.py  dilate.py  erode.py  extract_alpha.py  flip.py  gaussian_blur.py  grayscale.py  invert_alpha.py  layout.py  mask_alpha.py  opacity.py  packed_text.py  pad.py  render_svg.py  render_text.py  resize.py  resolve_color.py  resolve_resource.py  rotate.py  threshold_alpha.py  thumbnail.py  tint.py  translate.py
src/invariant_gfx/recipes/: __init__.py  packed_text.py
tests/: __init__.py  conftest.py  test_artifacts.py  test_e2e_content_flow.py  test_e2e_layered_badge.py  test_e2e_template_reuse.py  test_examples.py  test_graph_serialization.py  test_integration.py  test_op_blob_to_image.py  test_op_colorize.py  test_op_composite.py  test_op_create_solid.py  test_op_crop.py  test_op_dilate.py  test_op_erode.py  test_op_extract_alpha.py  test_op_gaussian_blur.py  test_op_invert_alpha.py  test_op_layout.py  test_op_mask_alpha.py  test_op_opacity.py  test_op_pad.py  test_op_render_svg.py  test_op_render_text.py  test_op_resize.py  test_op_resolve_color.py  test_op_resolve_resource.py  test_op_threshold_alpha.py  test_op_traits.py  test_op_translate.py  test_recipe_drop_shadow.py  test_recipe_packed_text.py  test_recipe_reflection.py
